--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -12,7 +12,8 @@ body {
     border-radius: 30px;
 }
 
-.form-control, .btn {
+.form-control,
+.btn {
     border-radius: 15px;
 }
 
@@ -20,8 +21,40 @@ body {
     background: linear-gradient(to bottom right, #8ad3d3, #eb90d7);
     color: #ffffff;
     border: none;
-    color: #ffffff;
     font-size: 20px;
     font-weight: 500;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.navbar {
+    background: linear-gradient(to bottom right, #8ad3d3, #eb90d7);
+}
+
+.container-fluid .navbar-brand,
+.navbar-nav .nav-link,
+button {
+    color: white !important;
+    font-size: 26px;
+    font-weight: 500;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+} */
